Substitute BROKEN with IGNORE in cases where the port requires the src tree to be present, or does not compile on certain versions of FreeBSD.  This will potentially avoid needless compilations on bento, and has the added benefit of improving certain reporting tools.  To most users, this change is a no-op.
PR:		61090
Submitted by:	linimon

--- a/emulators/rtc/Makefile
+++ b/emulators/rtc/Makefile
@@ -33,11 +33,11 @@ SRC_BASE?=	/usr/src
 .include <bsd.port.pre.mk>
 
 .if ${OSVERSION} < 400013
-BROKEN=		"Systems prior to 400013 are out of support"
+IGNORE=		"Systems prior to 400013 are out of support"
 .endif
 
 .if !exists(${SRC_BASE}/sys/Makefile)
-BROKEN=		"Kernel source files required"
+IGNORE=		"Kernel source files required"
 .endif
 
 do-fetch:
