--- a/emulators/vmware3/Makefile
+++ b/emulators/vmware3/Makefile
@@ -51,15 +51,15 @@ MODULES=	vmmon vmnet
 .include <bsd.port.pre.mk>
 
 .if ${OSVERSION} < 480102
-BROKEN=		"Systems prior to FreeBSD 480102 currently out of support"
+IGNORE=		"Systems prior to FreeBSD 480102 currently out of support"
 .endif
 
 .if !defined(HAVE_LINPROCFS) && !exists(/modules/linprocfs.ko) && !exists(/boot/kernel/linprocfs.ko) && !exists(${PREFIX}/modules/linprocfs.ko)
-BROKEN=		"This software absolutely requires Linux procfs support"
+IGNORE=		"This software absolutely requires Linux procfs support"
 .endif
 
 .if !exists(${SRC_BASE}/Makefile)
-BROKEN=		"Kernel source files required"
+IGNORE=		"Kernel source files required"
 .endif
 
 .if ${OSVERSION} < 500023
