Nitpicks for the comms/qpage port
	The comms/qpage port has a few minor problems.  A default installation gives
	the following errors when the /usr/local/etc/rc.d/qpage.sh script is
	execute:

	    qpage[68438]: cannot open /etc/qpage.cf: No such file or directory
	    qpage[68438]: cannot access LockDir(/var/spool/lock): Permission denied
	    qpage[68438]: cannot access QueueDir(/var/spool/qpage): No such file or directory
	    qpage[68438]: cannot chdir to QueueDir(/var/spool/qpage): No such file or directory

	In short:

	1) qpage looks for its configuration file in /etc instead of /usr/local/etc
	2) It setuid()'s to a user (daemon) without permission to access /var/spool/lock
	but does not document this anywhere outside of the source.
	3) It's queue directory is not created by installing the port.

PR:		ports/48059
Submitted by:	Kirk Strauser <kirk@strauser.com>

--- a/comms/qpage/Makefile
+++ b/comms/qpage/Makefile
@@ -7,6 +7,7 @@
 
 PORTNAME=	qpage
 PORTVERSION=	3.3
+PORTREVISION=	1
 CATEGORIES=	comms
 MASTER_SITES=	http://www.qpage.org/download/
 EXTRACT_SUFX=	.tar.Z
@@ -15,8 +16,15 @@ MAINTAINER=	ports@FreeBSD.org
 COMMENT=	SNPP client/server for sending messages to an alphanumeric pager
 
 GNU_CONFIGURE=	yes
+USE_REINPLACE=	yes
 
 MAN1=		qpage.1
+
+post-patch:
+	${REINPLACE_CMD} -e 's,%%PREFIX%%,${PREFIX},g' \
+		${WRKSRC}/qpage.man \
+		${WRKSRC}/config.input \
+		${WRKSRC}/config.h.in
 
 post-install:
 	@if [ ! -f ${PREFIX}/etc/rc.d/qpage.sh ]; then \
