No documentation for the port databases/dbf2mysql is installed
	There is no documentation after the port dbf2mysql installation.

PR:		ports/51140
Submitted by:	Alex Semenyaka <alexs@snark.ratmir.ru>
Approved by:	maintainer timeout

--- a/databases/dbf2mysql/Makefile
+++ b/databases/dbf2mysql/Makefile
@@ -7,6 +7,7 @@
 
 PORTNAME=	dbf2mysql
 PORTVERSION=	1.14
+PORTREVISION=	1
 CATEGORIES=	databases
 MASTER_SITES=	ftp://mysql.nixc.net/pub/mysql/Downloads/Contrib/ \
 		ftp://ftp.plig.org/pub/mysql/Downloads/Contrib/
@@ -16,8 +17,12 @@ COMMENT=	Programs to convert .dbf files to MySQL tables and vice versa
 
 LIB_DEPENDS=	mysqlclient.10:${PORTSDIR}/databases/mysql323-client
 
+PORTDOCS=	README
+
 do-install:
 	${INSTALL_SCRIPT} ${WRKSRC}/dbf2mysql ${PREFIX}/bin
 	${INSTALL_SCRIPT} ${WRKSRC}/mysql2dbf ${PREFIX}/bin
+	-${MKDIR} ${PREFIX}/share/doc/dbf2mysql
+	${INSTALL_DATA} ${WRKSRC}/README ${PREFIX}/share/doc/dbf2mysql
 
 .include <bsd.port.mk>
