s/APACHE_USER/WWWOWN/. I don't use APACHE_USER, so SUEXEC_CALLER is set to "". Since apache only produce error at run time, I didn't catch it. BTW, SUEXEC_CALLER is now correctly set.
Noticed by:     Tsurutani Naoki <turutani@scphys.kyoto-u.ac.jp>
Pointy hat to:  me
Approved by:    erwin (mentor) (implicity)

--- a/www/apache2/Makefile.modules
+++ b/www/apache2/Makefile.modules
@@ -195,7 +195,7 @@ SUEXEC_USERDIR?=		public_html
 SUEXEC_SAFEPATH?=		${PREFIX_RELDEST}/bin:${LOCALBASE}/bin:/usr/bin:/bin
 SUEXEC_UIDMIN?=			1000
 SUEXEC_GIDMIN?=			1000
-SUEXEC_CALLER?=			${APACHE_USER}
+SUEXEC_CALLER?=			${WWWOWN}
 _APACHE_MODULES+=		${SUEXEC_MODULES}
 CONFIGURE_ARGS+=		--with-suexec-caller=${SUEXEC_CALLER} \
 						--with-suexec-uidmin=${SUEXEC_UIDMIN} \
