--- a/www/apache20/Makefile.modules
+++ b/www/apache20/Makefile.modules
@@ -195,7 +195,7 @@ SUEXEC_USERDIR?=		public_html
 SUEXEC_SAFEPATH?=		${PREFIX_RELDEST}/bin:${LOCALBASE}/bin:/usr/bin:/bin
 SUEXEC_UIDMIN?=			1000
 SUEXEC_GIDMIN?=			1000
-SUEXEC_CALLER?=			${APACHE_USER}
+SUEXEC_CALLER?=			${WWWOWN}
 _APACHE_MODULES+=		${SUEXEC_MODULES}
 CONFIGURE_ARGS+=		--with-suexec-caller=${SUEXEC_CALLER} \
 						--with-suexec-uidmin=${SUEXEC_UIDMIN} \
