Add port for py-webware 0.8.1, A suite of software components for developing object-oriented, web-based applications.
PR:		42295
Submitted by:	Stefan Schwarzer <sschwarzer@sschwarzer.net>
Reminded by:	linimon (thanks!)

--- a/www/Makefile
+++ b/www/Makefile
@@ -484,6 +484,7 @@
     SUBDIR += py-mt
     SUBDIR += py-scgi
     SUBDIR += py-websvcs
+    SUBDIR += py-webware
     SUBDIR += pyweblib
     SUBDIR += qdecoder
     SUBDIR += quanta
