New port: deskutils/journal is a tool for replacing the traditional text-based diary
	Journal is a small tool useful for replacing the traditional
	text-based diary.  Its features include multpile user
	support, multiple journals for each user, encryption, reading
	and writing new entries, and timestamping of entries.

PR:		ports/59293
Submitted by:	Jose Devezas <jose.devezas@fe.up.pt>

--- a/deskutils/Makefile
+++ b/deskutils/Makefile
@@ -48,6 +48,7 @@
     SUBDIR += ical
     SUBDIR += ithought
     SUBDIR += jlj
+    SUBDIR += journal
     SUBDIR += karamba
     SUBDIR += kbirthday
     SUBDIR += kdepim3
