Reset maintainership to ports@.  The truth is I don't have the time to fix this up.  Someone should pick it up and update it to the snapshot at glide.sf.net.
Suggested by:	linimon

--- a/graphics/glide3/Makefile
+++ b/graphics/glide3/Makefile
@@ -18,7 +18,7 @@ DISTNAME=	Glide3-FreeBSD-${PORTVERSION}
 EXTRACT_SUFX=	.tar.bz2
 #The distfile is CVS Glide3-FreeBSD branch with */glide3/tests/* removed
 
-MAINTAINER=	anholt@freebsd.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Library to support 3dfx Voodoo3/4/5/Banshee with the DRI
 
 USE_BZIP2=		yes
