Reset maintainership to ports@.  The truth is I don't have the time to fix this up.  This port should wither away and die once someone updates graphics/glide3.
Suggested by:	linimon

--- a/x11-servers/driglide/Makefile
+++ b/x11-servers/driglide/Makefile
@@ -11,7 +11,7 @@ CATEGORIES=	x11-servers
 MASTER_SITES=	${MASTER_SITE_LOCAL}
 MASTER_SITE_SUBDIR= anholt/driglide/
 
-MAINTAINER=	anholt@freebsd.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Libraries to support 3dfx Voodoo3/4/5/Banshee with the DRI
 
 USE_BZIP2=		yes
