Reset maintainer to ports@.  From private email from the previous maintainer:
  Time constraints prevent me from maintaining this port properly. I
  apologize for being unable to serve the community better, but life
  has gotten in the way of things as usual.

  The build issue here seems to be a rather strange one, and has to do
  with compiling on the alpha. I have no way of troubleshooting this
  myself, since I don't have  access to the build environment.

  The port requires some heavy-duty updating and it's really not
  something I have much time to work on. Unfortunately.

  I hope someone else will take over from me.

Thanks to Alex for his work on this port.

--- a/mail/zmailer/Makefile
+++ b/mail/zmailer/Makefile
@@ -11,7 +11,7 @@ PORTREVISION=	1
 CATEGORIES=	mail
 MASTER_SITES=	ftp://ftp.funet.fi/pub/unix/mail/zmailer/src/
 
-MAINTAINER=	veers@disturbed.net
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	A fully functional fast, robust SMTP server and transport agent
 
 CONFLICTS=	courier-0.* postfix-1.* postfix-2.* sendmail-8.* sendmail-*-8.* smail-3.*
