--- a/misc/xfce4-wm-themes/Makefile
+++ b/misc/xfce4-wm-themes/Makefile
@@ -6,10 +6,12 @@
 #
 
 PORTNAME=	xfce4-wm-themes
-PORTVERSION=	4.0.0
+PORTVERSION=	4.0.3
 CATEGORIES=	misc xfce
 MASTER_SITES=	http://www.xfce.org/archive/xfce-${PORTVERSION}/src/ \
-		http://linux.imp.mx/xfce4/xfce_${PORTVERSION}/src/
+                ftp://ftp.berlios.de/pub/xfce-goodies/${PORTVERSION}/xfce-${PORTVERSION}/src/ \
+                http://hannelore.f1.fhtw-berlin.de/mirrors/xfce4/${PORTVERSION}/ \
+                http://www.efd.lth.se/~c03bk/xfce4/mirror/tarballs/${PORTVERSION}/
 DISTNAME=	xfwm4-themes-${PORTVERSION}
 DIST_SUBDIR=	xfce4
 
