--- a/x11/libxfce4util/Makefile
+++ b/x11/libxfce4util/Makefile
@@ -6,10 +6,12 @@
 #
 
 PORTNAME=	libxfce4util
-PORTVERSION=	4.0.1
+PORTVERSION=	4.0.3
 CATEGORIES=	x11 xfce
 MASTER_SITES=	http://www.xfce.org/archive/xfce-${PORTVERSION}/src/ \
-		http://linux.imp.mx/xfce4/xfce_${PORTVERSION}/src/
+                ftp://ftp.berlios.de/pub/xfce-goodies/${PORTVERSION}/xfce-${PORTVERSION}/src/ \
+                http://hannelore.f1.fhtw-berlin.de/mirrors/xfce4/${PORTVERSION}/ \
+                http://www.efd.lth.se/~c03bk/xfce4/mirror/tarballs/${PORTVERSION}/
 DIST_SUBDIR=	xfce4
 
 MAINTAINER=	oliver@FreeBSD.org
