- Update MASTER_SITES
PR:		ports/61186
Submitted by:	Kevin Oberman <oberman@es.net> (maintainer)

--- a/net-mgmt/irrtoolset/Makefile
+++ b/net-mgmt/irrtoolset/Makefile
@@ -8,7 +8,7 @@
 PORTNAME=	irrtoolset
 PORTVERSION=	4.7.3
 CATEGORIES=	net tk82
-MASTER_SITES=	ftp://ftp.ripe.net/tools/IRRToolSet/
+MASTER_SITES=	ftp://ftp.ripe.net/tools/IRRToolSet/IRRToolSet-${PORTVERSION}/
 DISTNAME=	IRRToolSet-${PORTVERSION}
 
 MAINTAINER=	oberman@es.net
