- Add missed dependency on compat4x when running on 5.x system

--- a/astro/setiathome/Makefile
+++ b/astro/setiathome/Makefile
@@ -18,6 +18,10 @@ COMMENT?=	Donate idle cycles to the search for space aliens
 
 .include <bsd.port.pre.mk>
 
+.if ${OSVERSION} >= 500000
+LIB_DEPENDS+=	c.4:${PORTSDIR}/misc/compat4x
+.endif
+
 # Global variables
 #
 
