Looks like 0.75 was respun.  The differences are superficial.  The NEWS file changed (a lot of text was removed including a thank you to me :-( ).  Also, the VERSION file was changed from 0.75 to 0.75cvs, the RPM spec file was slightly altered to remove the COPYRIGHT file, and a lot of the translation files had their dates changed.
Also, remove text talking about OpenSSL.  We no longer support OpenSSL in
gaim. [1]

Reported by:	bland [1]

--- a/net-im/gaim/Makefile
+++ b/net-im/gaim/Makefile
@@ -101,8 +101,7 @@ pre-everything::
 	@${ECHO_MSG} "	TCL_VER			Use Tcl/Tk (version)"
 	@${ECHO_MSG} ""
 .if !defined(WITH_GNUTLS) && defined(WITHOUT_NSS)
-	@${ECHO_MSG} "WARNING: In order to use MSN, you must define WITH_GNUTLS and/or WITH_NSS"
-	@${ECHO_MSG} "         if you disable OpenSSL support"
+	@${ECHO_MSG} "WARNING: In order to use MSN, you must define WITH_GNUTLS and/or WITH_NSS."
 	@${ECHO_MSG} ""
 .endif
 
