--- a/mail/dovecot/files/patch-dovecot-example.conf
+++ b/mail/dovecot/files/patch-dovecot-example.conf
@@ -195,6 +195,17 @@
  
  ##
  ## Authentication processes
+@@ -380,8 +380,8 @@
+ #   vpopmail: vpopmail library
+ #   ldap <config path>: LDAP, see doc/dovecot-ldap.conf
+ #   pgsql <config path>: a PostgreSQL database, see doc/dovecot-pgsql.conf
+-#auth_userdb = passwd
+-auth_userdb = pgsql /usr/local/etc/dovecot-pgsql.conf
++#auth_userdb = pgsql %%PREFIX%%/etc/dovecot-pgsql.conf
++auth_userdb = passwd
+ 
+ # Where password database is kept:
+ #   passwd: /etc/passwd or similiar, using getpwnam()
 @@ -391,9 +391,9 @@
  #   vpopmail: vpopmail authentication
  #   ldap <config path>: LDAP, see doc/dovecot-ldap.conf
