Add jai 1.1.2, which is Java Advanced Imaging (JAI) API provides a set of object-oriented interfaces that support a simple, high-level programming model which lets you manipulate images easily.
PR:		CBUG-ML/2572
Submitted by:	OISHI Masakuni <yamasa@bsdhouse.org>

--- a/java/Makefile
+++ b/java/Makefile
@@ -27,6 +27,7 @@
     SUBDIR += j2sdkee13
     SUBDIR += jad
     SUBDIR += jaf
+    SUBDIR += jai
     SUBDIR += jakarta-bcel
     SUBDIR += jakarta-commons-beanutils
     SUBDIR += jakarta-commons-cli
