Add jai-imageio 1.0, which is JAI Image I/O Tools provides reader, writer, and stream plug-ins for the Java Image I/O Framework and Image I/O-based read and write operations for Java Advanced Imaging.
PR:		CBUG-ML/2572
Submitted by:	OISHI Masakuni <yamasa@bsdhouse.org>
Committed at:	CBUG 2004 New Year Party

--- a/java/Makefile
+++ b/java/Makefile
@@ -28,6 +28,7 @@
     SUBDIR += jad
     SUBDIR += jaf
     SUBDIR += jai
+    SUBDIR += jai-imageio
     SUBDIR += jakarta-bcel
     SUBDIR += jakarta-commons-beanutils
     SUBDIR += jakarta-commons-cli
