--- a/textproc/xmerl/Makefile
+++ b/textproc/xmerl/Makefile
@@ -7,6 +7,7 @@
 
 PORTNAME=	xmerl
 PORTVERSION=	0.19
+PORTREVISION=	1
 CATEGORIES=	textproc
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE}
 MASTER_SITE_SUBDIR=	sowap
@@ -16,25 +17,31 @@ MAINTAINER=	olgeni@FreeBSD.org
 COMMENT=	A library for XML processing in Erlang
 
 BUILD_DEPENDS=	erlc:${PORTSDIR}/lang/erlang
-RUN_DEPENDS=	erlc:${PORTSDIR}/lang/erlang
+RUN_DEPENDS=	erl:${PORTSDIR}/lang/erlang
+
+PLIST_SUB=	VERSION="${PORTVERSION}"
 
 USE_GMAKE=	yes
 
+XMERL=		${PREFIX}/lib/erlang/lib/${PORTNAME}-${PORTVERSION}
+
 do-install:
+	@${MKDIR} ${PREFIX}/lib/erlang/lib/${PORTNAME}-${PORTVERSION}
+
+.if !defined(NOPORTDOCS)
 	@${MKDIR} ${DOCSDIR}
 	@${CP} -r ${WRKSRC}/doc/* ${DOCSDIR}
 	@${CHOWN} -R ${SHAREOWN}:${SHAREGRP} ${DOCSDIR}
+	@${LN} -s ${DOCSDIR} ${XMERL}/doc
+.endif
 
-	@${MKDIR} ${PREFIX}/lib/erlang/lib/${PORTNAME}
-
-	@for FILE in ebin inc src; do \
-		${MKDIR} ${PREFIX}/lib/erlang/lib/${PORTNAME}/$${FILE}; \
-		${CP} -r ${WRKSRC}/$${FILE}/* \
-			${PREFIX}/lib/erlang/lib/${PORTNAME}/$${FILE}; \
-		${CHMOD} ${SHAREMODE} \
-			${PREFIX}/lib/erlang/lib/${PORTNAME}/$${FILE}/*; \
+	@for SUBDIR in ebin inc src; do \
+		${MKDIR} ${XMERL}/$${SUBDIR}; \
+		${CP} -r ${WRKSRC}/$${SUBDIR}/* ${XMERL}/$${SUBDIR}; \
+		${CHMOD} ${SHAREMODE} ${XMERL}/$${SUBDIR}/*; \
 	done
 
-	@${CHOWN} -R ${SHAREOWN}:${SHAREGRP} ${PREFIX}/lib/erlang/lib/${PORTNAME}
+	@${CHOWN} -R ${SHAREOWN}:${SHAREGRP} ${XMERL}
+	@${LN} -sf ${PORTNAME}-${PORTVERSION} ${PREFIX}/lib/erlang/lib/${PORTNAME}
 
 .include <bsd.port.mk>
